--- a/WpfApp_gittest/MainWindow.xaml
+++ b/WpfApp_gittest/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Button Content="Button" HorizontalAlignment="Left" Margin="104,105,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="273,186,0,0" VerticalAlignment="Top" Width="75"/>
+
     </Grid>
 </Window>
