--- a/WpfApp_gittest/MainWindow.xaml
+++ b/WpfApp_gittest/MainWindow.xaml
@@ -8,10 +8,11 @@
         Title="MainWindow" Height="350" Width="525">
     <Grid>
         <Button Content="Button" HorizontalAlignment="Left" Margin="104,105,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="273,186,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="273,186,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="145,186,0,0" VerticalAlignment="Top" Width="75"/>
         <Label Content="Label" HorizontalAlignment="Left" Margin="134,244,0,0" VerticalAlignment="Top"/>
         <CheckBox Content="CheckBox" HorizontalAlignment="Left" Margin="315,105,0,0" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="315,256,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
